--- a/example-projects/gml-raptor-demo/datafiles/locale/locale_de.json
+++ b/example-projects/gml-raptor-demo/datafiles/locale/locale_de.json
@@ -37,12 +37,21 @@
 		"header_text"	: "Willkommen zur [?legal/game_name]",
 		"version_str"	: "Version {0} <- Das ist der Inhalt der Datei version.json",
 		"start_game"	: "Spiel starten",
+		"show_message"	: "MessageBox anzeigen",
 		"exit_game"		: "Spiel beenden",
 		
 		"info": {
 			"about"		: "Du siehst hier ein leeres gml-raptor Projekt.\nNur 1 Font, keine Button Sprites, das ist alles auf default.\nBewege die Maus über die Elemente, einige von ihnen\nhaben einen Tooltip, der dir sagt,\nwo du den Code im Projekt\nfür dieses spezifische Item findest.\n\nAchja, der Font ist im Script Game_Configuration als scribble_font_set_default eingetragen!",
 			"hotswap"	: "Klicke die Sprachbuttons\num LG_hotswap in Aktion zu sehen",
 			"flag"		: "Die animated_flag in Aktion ->",
+		},
+		
+		"demo_message": {
+			"title"			: "Demo MessageBox",
+			"text"			: "Das ist eine Nachricht mit [c_yellow]super wichtiger Information[/]\nfür den Benutzer!\n\nMit nur einer Zeile code!",
+			"click_title"	: "Button geklickt",
+			"ok_clicked"	: "Du hast [c_yellow]OK[/] geklickt",
+			"cancel_clicked": "Du hast [c_yellow]ABBRECHEN[/] geklickt",
 		},
 		
 		"tooltips": {
