--- a/example-projects/gml-raptor-demo/datafiles/locale/locale_en.json
+++ b/example-projects/gml-raptor-demo/datafiles/locale/locale_en.json
@@ -39,11 +39,17 @@
 		"start_game"	: "Start Game",
 		"show_message"	: "Show MessageBox",
 		"exit_game"		: "Exit Game",
+		"player_name"	: "Enter your name in the box below\nand click \"Save\" to demo the Savegame System",
+		"button_save"	: "Save",
+		"button_load"	: "Load",
+		"button_save_enc" : "Save encrypted",
+		"button_load_enc" : "Load encrypted",
 		
 		"info": {
 			"about"		: "You see a blank gml-raptor project here.\nOnly 1 Font, no Button Sprites, this is all default.\nHover over elements, some of them\noffer a tooltip that tells you,\nwhere you can find the code in the project\nfor that specific item.\n\nOh, btw, the font is set as scribble_font_set_default in the Game_Configuration script!",
 			"hotswap"	: "Click the locale buttons\nto see LG_hotswap in action",
-			"flag"		: "The animated_flag in action ->",			
+			"flag"		: "The animated_flag in action ->",	
+			"save_loc"	: "Your Savegames are located at\nC:/Users/<your-user-name>/appdata/local/gml_raptor_demo",
 		},
 		
 		"demo_message": {
