--- a/example-projects/gml-raptor-demo/datafiles/locale/locale_en.json
+++ b/example-projects/gml-raptor-demo/datafiles/locale/locale_en.json
@@ -34,16 +34,17 @@
 	},
 
 	"main_menu": {
-		"header_text"	: "Welcome to [?legal/game_name]",
-		"version_str"	: "Version {0} <- This demonstrates the contents of the version.json file",
-		"start_game"	: "Start Game",
-		"show_message"	: "Show MessageBox",
-		"exit_game"		: "Exit Game",
-		"player_name"	: "Enter your name in the box below\nand click \"Save\" to demo the Savegame System",
-		"button_save"	: "Save",
-		"button_load"	: "Load",
-		"button_save_enc" : "Save encrypted",
-		"button_load_enc" : "Load encrypted",
+		"header_text"		: "Welcome to [?legal/game_name]",
+		"version_str"		: "Version {0} <- This demonstrates the contents of the version.json file",
+		"start_state_game"	: "[scale,1.25]Start StateMachine Demo",
+		"start_race_game"	: "[scale,1.25]Start Race Demo",
+		"show_message"		: "[scale,1.25]Show MessageBox",
+		"exit_game"			: "[scale,1.25]Exit Game",
+		"player_name"		: "Enter your name in the box below\nand click \"Save\" to demo the Savegame System",
+		"button_save"		: "Save",
+		"button_load"		: "Load",
+		"button_save_enc" 	: "Save encrypted",
+		"button_load_enc" 	: "Load encrypted",
 		
 		"info": {
 			"about"		: "You see a blank gml-raptor project here.\nOnly 1 Font, no Button Sprites, this is all default.\nHover over elements, some of them\noffer a tooltip that tells you,\nwhere you can find the code in the project\nfor that specific item.\n\nOh, btw, the font is set as scribble_font_set_default in the Game_Configuration script!",
@@ -71,17 +72,25 @@
 	},
 
 	"play": {
-		"how_to_play": {
+		"how_to_play_states": {
 			"title": "How to play",
 			"text":  "Move your character with WASD keys.\n\nIn the middle of the screen, a [c_yellow]Spawner[/] will appear.\nIt spits out [c_yellow]enemies[/] every now and then.\n\nThey see you when you enter their yellow [c_yellow]Scanner range[/].\n\n[shake]Then you die.[/]\n\nIf you can touch an enemy on its back side, [shake]then the enemy dies![/]\n\n[c_orange]Try to survive as long as you can!",
+		},
+		"how_to_play_race": {
+			"title": "Race Demo",
+			"text":  "This is a short demo filling a playing field, that could be any Match-3 game\nwith random gems using [c_yellow]RaceTables[/].\n\nYou can modify the chances and enabled states with the controls.\n\nThis room contains a [c_yellow]RaceController[/] and a [c_yellow]RaceTable[/] object.\n\n[scale,1.25][c_yellow]WARNING![/] This is a [c_yellow]DEMO[/] Program!\nThe InputBoxes perform no type-checking!\nIf you enter nonsense (i.e. no numbers as Chance), it will crash!\n\nClick the [c_yellow]Run[/] button to fill the board.",
 		},
 		"game_over": {
 			"title": "Game over",
 			"text":  "You got caught!\n\nBut you could at least eliminate [c_yellow]{0}[/] enemies!\n\nNow we're heading back to the [c_yellow]Main Menu[/].",
 		},
 		"ui": {
-			"score_view"	: "Enemies eliminated: [c_yellow][scale,1.5]{0}[/]",
-			"debug_info"	: "Press [c_yellow]F12[/] to show/hide the debug infos",
+			"score_view"		: "Enemies eliminated: [c_yellow][scale,1.5]{0}[/]",
+			"debug_info"		: "Press [c_yellow]F12[/] to show/hide the debug infos",
+			"enabled"			: "Enabled",
+			"chance"			: "Chance",
+			"race_start_button"	: "[scale,1.25]Run",
+			"race_exit_button"	: "[scale,1.25]Exit Demo",
 		},
 	},
 
