--- a/example-projects/gml-raptor-demo/datafiles/locale/locale_en.json
+++ b/example-projects/gml-raptor-demo/datafiles/locale/locale_en.json
@@ -1,108 +1,99 @@
 {
-	"legal" : {
-		"game_name"		: "gml-raptor Demo",
-		"company"		: "Coldrock Games",
-		"copyright" 	: "(c)2023 Coldrock Games",
-		"locale_author"	: "Haerion Coldrock aka Grisgram",
-    	"developer"		: "Haerion Coldrock aka Grisgram",
-	},
-	
-	"credits" : {
-		"credits_title" : "Credits",
-	},
-	
-	"global_words" : {
-		"buttons" : {
-			"ok" 		: "OK",
-			"apply" 	: "Apply",
-			"cancel" 	: "Cancel",
-			"yes" 		: "Yes",
-			"no" 		: "No",
-			"save" 		: "Save",
-			"retry" 	: "Retry",
-			"ignore" 	: "Ignore",
-			"undo" 		: "Undo",
-			"back" 		: "Back",
-			"continue" 	: "Continue",
-		},
-		
-		"keyboard" : {
-			"shift" 	: "Shift",
-			"ctrl" 		: "Ctrl",
-			"alt" 		: "Alt",
-		},
-		
-		"states": {
-		  "disconnected": "Disconnected",
-		  "inactive"	: "Inactive",
-		  "connected"	: "Connected",
-		  "active"		: "Active",
-		  "unlocked"	: "Unlocked",
-		  "locked"		: "Locked",
-		  "closed"		: "Closed",
-		  "open"		: "Open"
-		}
-	},
-
-	"main_menu": {
-		"header_text"		: "Welcome to [?legal/game_name]",
-		"version_str"		: "Version {0} <- This demonstrates the contents of the version.json file",
-		"start_state_game"	: "[scale,1.25]Start StateMachine Demo",
-		"start_race_game"	: "[scale,1.25]Start Race Demo",
-		"show_message"		: "[scale,1.25]Show MessageBox",
-		"exit_game"			: "[scale,1.25]Exit Game",
-		"player_name"		: "Enter your name in the box below\nand click \"Save\" to demo the Savegame System",
-		"button_save"		: "Save",
-		"button_load"		: "Load",
-		"button_save_enc" 	: "Save encrypted",
-		"button_load_enc" 	: "Load encrypted",
-		
-		"info": {
-			"about"		: "You see a blank gml-raptor project here.\nOnly 1 Font, no Button Sprites, this is all default.\nHover over elements, some of them\noffer a tooltip that tells you,\nwhere you can find the code in the project\nfor that specific item.\n\nOh, btw, the font is set as scribble_font_set_default in the Game_Configuration script!",
-			"hotswap"	: "Click the locale buttons\nto see LG_hotswap in action",
-			"flag"		: "The animated_flag in action ->",	
-			"save_loc"	: "Your Savegames are located at\nC:/Users/<your-user-name>/appdata/local/gml_raptor_demo",
-		},
-		
-		"demo_message": {
-			"title"			: "Demo MessageBox",
-			"text"			: "This is a message displaying [ci_accent]super important information[/]\nto the user!\n\nWith a single line of code!",
-			"click_title"	: "Button clicked",
-			"ok_clicked"	: "You clicked [ci_accent]OK",
-			"cancel_clicked": "You clicked [ci_accent]CANCEL",
-		},
-		
-		"tooltips": {
-			"language_button"	: "Object: Objects\\LanguageButton\nCode: Scripts\\MainMenuButtons\nSettings: RoomEditor Variables on this Object",
-			"game_button"		: "Object: _gml_raptor_\\UI\\controls\\TextButton\nCode: Scripts\\MainMenuButtons\nSettings: RoomEditor Variables on this Object",
-			"demo_label"		: "This string is resolved via string reference in json.\nLook at the locale_en.json in the Included Files\\locale folder at \"main_menu/header_text\"!",
-			"version_label"		: "Look at the version.json File in the Included Files folder!",
-			"inputbox"			: "Enter some text and test the UX:\n[ci_accent]Cursor keys[/], [ci_accent]Shift+Cursor[/]\n[ci_accent]Home, End[/] (with and without Shift)\n[ci_accent]Mouse-Click[/], [ci_accent]Mouse-Drag[/] to select,\n[ci_accent]Ctrl-C, Ctrl-X, Ctrl-V[/] etc\n\nThe InputBox offers quite some comfort!",
-		},
-
-	},
-
-	"play": {
-		"how_to_play_states": {
-			"title": "How to play",
-			"text":  "Move your character with WASD keys.\n\nIn the middle of the screen, a [ci_accent]Spawner[/] will appear.\nIt spits out [ci_accent]enemies[/] every now and then.\n\nThey see you when you enter their yellow [ci_accent]Scanner range[/].\n\n[shake]Then you die.[/]\n\nIf you can touch an enemy on its back side, [shake]then the enemy dies![/]\n\n[ci_accent2]Try to survive as long as you can!",
-		},
-		"how_to_play_race": {
-			"title": "Race Demo",
-			"text":  "This is a short demo filling a playing field, that could be any Match-3 game\nwith random gems using [ci_accent]RaceTables[/].\n\nYou can modify the chances and enabled states with the controls.\n\nThis room contains a [ci_accent]RaceController[/] and a [ci_accent]RaceTable[/] object.\n\n[scale,1.25][ci_accent]WARNING![/] This is a [ci_accent]DEMO[/] Program!\nThe InputBoxes perform no type-checking!\nIf you enter nonsense (i.e. no numbers as Chance), it will crash!\n\nClick the [ci_accent]Run[/] button to fill the board.",
-		},
-		"game_over": {
-			"title": "Game over",
-			"text":  "You got caught!\n\nBut you could at least eliminate [ci_accent]{0}[/] enemies!\n\nNow we're heading back to the [ci_accent]Main Menu[/].",
-		},
-		"ui": {
-			"score_view"		: "Enemies eliminated: [ci_accent][scale,1.5]{0}[/]",
-			"debug_info"		: "Press [ci_accent]F12[/] to show/hide the debug infos",
-			"enabled"			: "Enabled",
-			"chance"			: "Chance",
-			"race_start_button"	: "[scale,1.25]Run",
-			"race_exit_button"	: "[scale,1.25]Exit Demo",
-		},
-	},
-
+  "legal": {
+    "game_name": "gml-raptor Demo",
+    "company": "Coldrock Games",
+    "copyright": "(c)2023 Coldrock Games",
+    "locale_author": "Haerion Coldrock aka Grisgram",
+    "developer": "Haerion Coldrock aka Grisgram"
+  },
+  "credits": {
+    "credits_title": "Credits"
+  },
+  "global_words": {
+    "buttons": {
+      "ok": "OK",
+      "apply": "Apply",
+      "cancel": "Cancel",
+      "yes": "Yes",
+      "no": "No",
+      "save": "Save",
+      "retry": "Retry",
+      "ignore": "Ignore",
+      "undo": "Undo",
+      "back": "Back",
+      "continue": "Continue"
+    },
+    "keyboard": {
+      "shift": "Shift",
+      "ctrl": "Ctrl",
+      "alt": "Alt"
+    },
+    "states": {
+      "disconnected": "Disconnected",
+      "inactive": "Inactive",
+      "connected": "Connected",
+      "active": "Active",
+      "unlocked": "Unlocked",
+      "locked": "Locked",
+      "closed": "Closed",
+      "open": "Open"
+    }
+  },
+  "main_menu": {
+    "header_text": "Welcome to [?legal/game_name]",
+    "version_str": "Version {0} <- This demonstrates the contents of the version.json file",
+    "start_state_game": "[scale,1.25]Start StateMachine Demo",
+    "start_race_game": "[scale,1.25]Start Race Demo",
+    "show_message": "[scale,1.25]Show MessageBox",
+    "exit_game": "[scale,1.25]Exit Game",
+    "player_name": "Enter your name in the box below\nand click \"Save\" to demo the Savegame System",
+    "button_save": "Save",
+    "button_load": "Load",
+    "button_save_enc": "Save encrypted",
+    "button_load_enc": "Load encrypted",
+    "info": {
+      "about": "You see a blank gml-raptor project here.\nOnly 1 Font, no Button Sprites, this is all default.\nHover over elements, some of them\noffer a tooltip that tells you,\nwhere you can find the code in the project\nfor that specific item.\n\nOh, btw, the font is set as scribble_font_set_default in the Game_Configuration script!",
+      "hotswap": "Click the locale buttons\nto see LG_hotswap in action",
+      "flag": "The animated_flag in action ->",
+      "save_loc": "Your Savegames are located at\nC:/Users/<your-user-name>/appdata/local/gml_raptor_demo"
+    },
+    "demo_message": {
+      "title": "Demo MessageBox",
+      "text": "This is a message displaying [ci_accent]super important information[/]\nto the user!\n\nWith a single line of code!",
+      "click_title": "Button clicked",
+      "ok_clicked": "You clicked [ci_accent]OK",
+      "cancel_clicked": "You clicked [ci_accent]CANCEL"
+    },
+    "tooltips": {
+      "language_button": "Object: Objects\\LanguageButton\nCode: Scripts\\MainMenuButtons\nSettings: RoomEditor Variables on this Object",
+      "game_button": "Object: _gml_raptor_\\UI\\controls\\TextButton\nCode: Scripts\\MainMenuButtons\nSettings: RoomEditor Variables on this Object",
+      "demo_label": "This string is resolved via string reference in json.\nLook at the locale_en.json in the Included Files\\locale folder at \"main_menu/header_text\"!",
+      "version_label": "Look at the version.json File in the Included Files folder!",
+      "inputbox": "Enter some text and test the UX:\n[ci_accent]Cursor keys[/], [ci_accent]Shift+Cursor[/]\n[ci_accent]Home, End[/] (with and without Shift)\n[ci_accent]Mouse-Click[/], [ci_accent]Mouse-Drag[/] to select,\n[ci_accent]Ctrl-C, Ctrl-X, Ctrl-V[/] etc\n\nThe InputBox offers quite some comfort!",
+      "playground_button": "Grisgram's domain.\nIn this room I test some features of raptor.\nIt's not translated, no user guidance, it's... my playground!"
+    },
+    "start_playground": "[scale,1.25]Dev Playground"
+  },
+  "play": {
+    "how_to_play_states": {
+      "title": "How to play",
+      "text": "Move your character with WASD keys.\n\nIn the middle of the screen, a [ci_accent]Spawner[/] will appear.\nIt spits out [ci_accent]enemies[/] every now and then.\n\nThey see you when you enter their yellow [ci_accent]Scanner range[/].\n\n[shake]Then you die.[/]\n\nIf you can touch an enemy on its back side, [shake]then the enemy dies![/]\n\n[ci_accent2]Try to survive as long as you can!"
+    },
+    "how_to_play_race": {
+      "title": "Race Demo",
+      "text": "This is a short demo filling a playing field, that could be any Match-3 game\nwith random gems using [ci_accent]RaceTables[/].\n\nYou can modify the chances and enabled states with the controls.\n\nThis room contains a [ci_accent]RaceController[/] and a [ci_accent]RaceTable[/] object.\n\n[scale,1.25][ci_accent]WARNING![/] This is a [ci_accent]DEMO[/] Program!\nThe InputBoxes perform no type-checking!\nIf you enter nonsense (i.e. no numbers as Chance), it will crash!\n\nClick the [ci_accent]Run[/] button to fill the board."
+    },
+    "game_over": {
+      "title": "Game over",
+      "text": "You got caught!\n\nBut you could at least eliminate [ci_accent]{0}[/] enemies!\n\nNow we're heading back to the [ci_accent]Main Menu[/]."
+    },
+    "ui": {
+      "score_view": "Enemies eliminated: [ci_accent][scale,1.5]{0}[/]",
+      "debug_info": "Press [ci_accent]F12[/] to show/hide the debug infos",
+      "enabled": "Enabled",
+      "chance": "Chance",
+      "race_start_button": "[scale,1.25]Run",
+      "race_exit_button": "[scale,1.25]Exit Demo"
+    }
+  }
 }
