--- a/example-projects/gml-raptor-demo/datafiles/locale/locale_de.json
+++ b/example-projects/gml-raptor-demo/datafiles/locale/locale_de.json
@@ -101,6 +101,14 @@
   "ui_demo": {
     "show_sizeable": "[scale,1.25]Sizable Window (leer)",
     "sizable_window_title": "Ein vergrößerbares Fenster",
-    "control_tree": "[scale,1.25]Control Layouts"
+    "control_tree": "[scale,1.25]Control Layouts",
+    "show_login": "[scale,1.25]Demo Login",
+    "login_window_title": "Login",
+    "login_top_message": "Einloggen, um fortzufahren",
+    "login_user": "Benutzername:",
+    "login_pwd": "Passwort:",
+    "login_button": "Anmelden",
+    "login_remember": "Benutzername und Password merken",
+    "login_entered_values": "Auslesen, der eingegebenen Daten aus einem dynamischen Fenster:"
   }
 }
